--- a/TehnicalChallengeIbis/custom.css
+++ b/TehnicalChallengeIbis/custom.css
@@ -51,7 +51,8 @@ background-color: none;
     padding: 4px 30px;
     float: right;
     margin-left: 10px;
-
+    position: absolute;
+    right: 0;
 }
 
 .resetFiltersBtn:hover{
@@ -104,6 +105,7 @@ li {
     display: inline;
     vertical-align: middle;
 }
+
 
 .card-pie {
     max-height: 180px;
